add: backup doc

--- a/博客/技术/备份与迁移.md
+++ b/博客/技术/备份与迁移.md
@@ -1,1 +1,44 @@
 
+
+## 备份
+
+传统备份脚本
+
+```bash
+docker exec mongo mongodump --out /data/db-backup/$DATE
+```
+
+
+博客本身自带备份。每天凌晨1点。
+所以只需要把这个备份文件做迁移就可用来。但是没有redis的备份。
+这里可以加上
+
+```bash
+cp /root/mx-space/core/data/mx-space/backup /mnt/gdrive
+cd /root/mx-space/core && docker compose down
+cp /root/mx-space/core/data/redis /mnt/gdrive
+cd /root/mx-space/core && docker compose up -d 
+```
+
+
+## 恢复
+
+创建对应的compose 文件。
+将对应的数据拷贝过去就行了。
+
+对于传统手动备份，需要手动恢复mongo 里面的数据
+
+```yml
+volumes:
+  - ./data/db:/data/db
+  - ./data/db-backup:/data/db-backup
+```
+
+拷贝数据库备份文件到外挂目录，执行恢复命令
+```bash
+docker exec -it mongo mongorestore /data/db-backup/$DATE
+```
+
+最后 `docker compose up -d`
+
+
