--- a/热题100/链表/链表系列.md
+++ b/热题100/链表/链表系列.md
@@ -122,9 +122,204 @@ class Solution {
 ```
 
 
-## 
+## 环形链表I
+[题目地址](https://leetcode.cn/problems/linked-list-cycle-ii)
+这题使用哈希表很容易做出来，但是时间复杂度就是`O(N)`，有没有办法用时间按复杂度为`O(1)`的做法呢？有的有的兄弟。`I`中用双指针可以做到空间复杂度为`O(1)`这里可以参考双指针的做法。
+如何理解呢？
+定义两个指针`fast`,`slow`。`fast`每次移动两步，`slow`每次移动一步。这样如果链表有环最后他们一定会在环中相遇。判断`fast.next`是否为空，如果没有环就退出循环了。
+在环中相遇，此时fast在环中跑了N圈了，所以下面等式成立
+
+一开始令快指针 `fast` 和慢指针 `slow` 都位于头部，然后：
+
+- `fast` 每次走 **2 步**
+    
+- `slow` 每次走 **1 步**
+
+因此，**fast 走过的步数始终是 slow 的 2 倍**。
+
+---
+
+### 设定变量
+
+- 从头到环入口的距离：**a**
+    
+- 环的长度：**b**
+    
+- 相遇时，slow 在环内走了：**x**
+    
+- fast 比 slow 多走了：**n 圈（n 为正整数）**
+
+---
+### 距离关系
+
+- slow 走过的距离：  
+    `a + x`
+
+- fast 走过的距离：  
+    `a + x + n * b`
+ 
+由于 fast 始终是 slow 的两倍，因此有：
+
+$$
+2(a+x)=a+x+nb2(a + x) = a + x + nb2(a+x)=a+x+nb
+$$
+化简得到：
+$$
+a+x=nba + x = nba+x=nb
+$$
+---
+
+### 关键结论
+
+> **慢指针再往前走 a 步，就正好回到环入口**
+
+因为：
+
+- `nb` 表示绕环整整数圈回入口
+    
+- 当前 slow 在环内为 `x`
+    
+- 所以差值 `nb - x = a`
+    
+- 刚好是从相遇点回到入口的距离  
+    👉 **slow 再走 a 步必到入口**
 
 
+```java
+/**
+ * Definition for singly-linked list.
+ * class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode detectCycle(ListNode head) {
+        if (head == null || head.next == null) {
+            return null;
+        }
+        ListNode fast = head;
+        ListNode slow = head;
+        while (fast != null && fast.next != null) {
+            fast = fast.next.next;
+            slow = slow.next;
+            if (slow == fast) {
+                while (head != slow) {
+                    head = head.next;
+                    slow = slow.next;
+                }
+                return head;
+            }
+        }
+        return null;
+    }
+}
+```
 
+## 回文链表
+[题目地址](https://leetcode.cn/problems/palindrome-linked-list)
+这题的是个简单题目，但是如果让你用O(1) 的时间复杂度你会这么做？
+我能想到的就是快慢指针从中间断开，得到两个链表一个反转，再进行比较。
+我感觉难的地方是如何断开。这么找到中间点。如果是奇数个数链表呢？
+慢指针还应该停在断开部分的前一个节点，那样我们使用一个哨兵节点。都从这里开始
+终止条件是快指针 为空或者快指针的下个节点为空，这样就能保证，断开后的链表就算是奇数后面的比前面的少一个。
+以后面为准就行了。
+代码实现
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public boolean isPalindrome(ListNode head) {
+        ListNode dummy = new ListNode(-1, head);
+        ListNode fast = dummy;
+        ListNode slow = dummy;
+        while (fast != null && fast.next != null) {
+            fast = fast.next.next;
+            slow = slow.next;
+        }
+        ListNode n2 = res(slow.next);
+        slow.next = null;
+        while (n2 != null) {
+            if(n2.val != head.val) {
+                return false;
+            }
+            n2 = n2.next;
+            head = head.next;
+        }
+        return true;
+    }
+
+    public ListNode res(ListNode head) {
+        if(head == null || head.next == null) {
+            return head;
+        }
+        ListNode pre = null;
+        ListNode cur = head;
+        while(cur!=null) {
+            ListNode next = cur.next;
+            cur.next = pre;
+
+            pre = cur;
+            cur = next;
+        }
+        return pre;
+    }
+}
+```
+突然发现不需要哨兵节点。
+如果fast == null 说明是偶数。
+slow 指针回落在新链表的头节点。
+如果fast != null 说明是奇数。
+slow 会落在中点，slow 下一位是新链表的头节点。
+```java
+class Solution {
+    public boolean isPalindrome(ListNode head) {
+        if (head == null || head.next == null) return true;
+        // 快慢指针找中点
+        ListNode fast = head;
+        ListNode slow = head;
+        while (fast != null && fast.next != null) {
+            fast = fast.next.next;
+            slow = slow.next;
+        }
+        // 如果 fast 不为空，则为奇数长度，跳过中点
+        if (fast != null) {
+            slow = slow.next;
+        }
+        // 反转后半段
+        ListNode n2 = reverse(slow);
+        // 比较前后两部分
+        ListNode n1 = head;
+        while (n2 != null) {
+            if (n1.val != n2.val) return false;
+            n1 = n1.next;
+            n2 = n2.next;
+        }
+        return true;
+    }
+    private ListNode reverse(ListNode head) {
+        ListNode pre = null;
+        while (head != null) {
+            ListNode next = head.next;
+            head.next = pre;
+            pre = head;
+            head = next;
+        }
+        return pre;
+    }
+}
+```
 
 
