Addded: second solution for random linked list copying

--- a/热题100/链表/随机链表的复制.md
+++ b/热题100/链表/随机链表的复制.md
@@ -41,3 +41,73 @@ class Solution {
     }
 }
 ```
+
+第二种写法，先把每个节点做个副本，放在旧节点的后面。
+在构建random，旧random 找到了 ，新random 就在 旧的后面一位，空的就为空。
+最后拆分链表。需要注意的是，需要恢复旧的链表，不然不对。
+```java
+/*
+// Definition for a Node.
+class Node {
+    int val;
+    Node next;
+    Node random;
+
+    public Node(int val) {
+        this.val = val;
+        this.next = null;
+        this.random = null;
+    }
+}
+*/
+
+class Solution {
+    public Node copyRandomList(Node head) {
+        if(head == null) {
+            return head;
+        }
+        Node cur = head;
+        // 先构建next
+        while (cur != null) {
+            Node next = cur.next;
+            Node newNode = new Node(cur.val);
+            cur.next = newNode;
+            newNode.next = next;
+            cur = next;
+        }
+
+        cur = head;
+        while (cur != null) {
+            Node random = cur.random;
+            Node curp = cur.next;
+            if (random != null) {
+                Node randomp = random.next;
+                curp.random = randomp;
+            } else {
+                curp.random = null;
+            }
+            cur = cur.next.next;
+        }
+        // Node newHead = head.next;
+        // cur = newHead;
+        // while(cur.next != null) {
+        //     cur.next = cur.next.next;
+        //     cur = cur.next;
+        // }
+        // return newHead;
+        Node newHead = head.next;
+        cur = head;
+        Node newCur = newHead;
+        while (cur != null) {
+            cur.next = newCur.next;
+            cur = cur.next;
+            if(newCur.next != null) {
+                newCur.next = newCur.next.next;
+                newCur = newCur.next;
+            }
+        }
+        return newHead;
+    }
+}
+```
+
