--- a/热题100/树/二叉树的遍历.md
+++ b/热题100/树/二叉树的遍历.md
@@ -114,4 +114,27 @@ public List<Integer> preorderTraversal(TreeNode root) {
 }
 ```
 
-
+## 中序
+### 迭代法
+今天写两次了
+```java
+public List<Integer> preorderTraversal(TreeNode root) {
+    List<Integer> list = new ArrayList<>();
+    Deque<TreeNode> stack = new ArrayDeque<>();
+    if (root == null) {
+        return list;
+    }
+    TreeNode cur = root;
+    while (!stack.isEmpty() || cur != null) {
+        if(cur != null) {
+            stack.push(cur);
+            cur = cur.left;
+        } else {
+            TreeNode pop = stack.pop();
+            list.add(pop.val);
+            cur = pop.right;
+        }
+    }
+    return list;
+}
+```
