二叉树的最近公共祖先解法。

--- a/热题100/树/二叉树的的最近公共祖先.md
+++ b/热题100/树/二叉树的的最近公共祖先.md
@@ -31,3 +31,53 @@ class Solution {
     }
 }
 ```
+
+
+但是如果换做非二叉搜索树，这又因该怎么写呢？？
+看了题解才知道
+
+递归实现。
+
+终止条件是如果越过叶子节点直接返回null
+
+调用递归 分别对左右孩子递归
+
+根据返回值再次返回
+
+如果左右孩子都为为空，则返回空
+
+如果左右孩子都不是空。这就是当前root 就是最近的。
+
+如果左右孩子有一个为空，返回不为空的那个。
+
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if (root == null || root == p || root == q) {
+            return root;
+        }
+
+        TreeNode left = lowestCommonAncestor(root.left, p, q);
+        TreeNode right = lowestCommonAncestor(root.right, p, q);
+
+        if (left == null && right == null) {
+            return null;
+        }
+
+        if (left == null || right == null) {
+            return left == null ? right : left;
+        }
+        return root;
+    }
+}
+```
