--- a/热题100/树/路径总和.md
+++ b/热题100/树/路径总和.md
@@ -65,7 +65,7 @@ class Solution {
         if (root == null) {
             return 0;
         }
-        int count += countPathsFromNode(root, targetSum);
+        int count = countPathsFromNode(root, targetSum);
         count += pathSum(root.left, targetSum);
         count += pathSum(root.right, targetSum);
         return count;
