修正回溯解法说明，明确 index 的含义

--- a/热题100/回溯问题/电话号码的组合.md
+++ b/热题100/回溯问题/电话号码的组合.md
@@ -1,6 +1,6 @@
 [题目地址](https://leetcode.cn/problems/letter-combinations-of-a-phone-number)
 
-常规的回溯解法，要注意 index 的值，不能被重复使用。
+常规的回溯解法，要注意 index ,这里index 指的是到第几个数字了，指的不是数字里面的字母。
 ```java
 class Solution {
     List<String> res = new ArrayList<>();
