add: 新增minio数据备份的相关命令

--- a/博客/技术/备份与迁移.md
+++ b/博客/技术/备份与迁移.md
@@ -20,6 +20,16 @@ cp /root/mx-space/core/data/redis /mnt/gdrive
 cd /root/mx-space/core && docker compose up -d 
 ```
 
+minio数据备份
+
+```bash
+#root@ser657914752113:~/docker-apps/minio# ls
+#config  data  docker-compose.yml
+
+cp -r /root/docker-apps/minio/data /mnt/gdrive/minio/data
+cp -r /root/docker-apps/minio/config /mnt/gdrive/minio/config
+```
+
 
 ## 恢复
 
