谷歌浏览器数据迁移

--- a/博客/技术/备份与迁移.md
+++ b/博客/技术/备份与迁移.md
@@ -14,9 +14,9 @@ docker exec mongo mongodump --out /data/db-backup/$DATE
 这里可以加上
 
 ```bash
-cp /root/mx-space/core/data/mx-space/backup /mnt/gdrive
+cp -r /root/mx-space/core/data/mx-space/backup /mnt/gdrive
 cd /root/mx-space/core && docker compose down
-cp /root/mx-space/core/data/redis /mnt/gdrive
+cp -r /root/mx-space/core/data/redis /mnt/gdrive
 cd /root/mx-space/core && docker compose up -d 
 ```
 
@@ -52,3 +52,32 @@ docker exec -it mongo mongorestore /data/db-backup/$DATE
 最后 `docker compose up -d`
 
 
+### 谷歌浏览器数据迁移
+
+### 1️⃣ Flatpak Chrome 数据目录（来源）
+
+`~/.var/app/com.google.Chrome/config/google-chrome/`
+
+### 2️⃣ 系统版 Chrome 数据目录（目标）
+
+`~/.config/google-chrome/`
+
+
+```bash
+cp -r ~/.var/app/com.google.Chrome/config/google-chrome \
+      ~/.var/app/com.google.Chrome/config/google-chrome.bak
+```
+
+```bash
+mkdir -p ~/.config/google-chrome
+```
+
+```bash
+cp -r ~/.var/app/com.google.Chrome/config/google-chrome/* \
+      ~/.config/google-chrome/
+```
+
+
+```bash
+chmod -R u+rw ~/.config/google-chrome
+```
