--- a/热题100/动态规划/不同路径.md
+++ b/热题100/动态规划/不同路径.md
@@ -1,4 +1,4 @@
-
+[题目地址](https://leetcode.cn/problems/unique-paths/)
 很简单不必理会
 空间复杂度是O(mn)
 如何降低空间复杂度呢？
@@ -22,3 +22,27 @@ class Solution {
     }
 }
 ```
+
+时间复杂度为O(N) 的写法。
+状态转移方程为 `dp[i][j] = dp[i-1][j] + dp[i][j-1]`
+`dp[i][j-1]` 可以用当前数组值因为没有被替换掉。
+`dp[i-1][j]` 就是当前的前一个值。
+这里可以发现 只用维护一行就行了，后面直接覆盖就可以了。
+
+```java
+class Solution {
+    public int uniquePaths(int m, int n) {
+        int[] dp = new int[n];
+        for (int i = 0; i < n; i++) {
+            dp[i] = 1;
+        }
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                dp[j] = dp[j] + dp[j-1];
+            }
+        }
+        return dp[n-1];
+    }
+}
+```
+
