--- a/热题100/动态规划/买卖股票的最佳时机.md
+++ b/热题100/动态规划/买卖股票的最佳时机.md
@@ -1,4 +1,4 @@
-[](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
+[题目地址](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
 
 ```java
 class Solution {
