--- a/热题100/动态规划/买卖股票的最佳时机.md
+++ b/热题100/动态规划/买卖股票的最佳时机.md
@@ -13,3 +13,21 @@ class Solution {
     }
 }
 ```
+
+
+动态规划思路
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int[][] dp = new int[prices.length + 1][2];
+        dp[0][0] = Integer.MIN_VALUE;
+        int res = 0;
+        for (int i = 1; i <= prices.length; i++) {
+            dp[i][0] = Math.max(dp[i - 1][0],0 - prices[i - 1]);
+            dp[i][1] = Math.max(prices[i - 1] + dp[i][0], dp[i - 1][1]);
+            res = Math.max(res, dp[i][1]);
+        }
+        return res;
+    }
+}
+```
