add: 添加管道导出数据库方案

--- a/博客/分享/数据库导出方案.md
+++ b/博客/分享/数据库导出方案.md
@@ -12,3 +12,25 @@ mysqldump \
 --triggers \
 --events > online_data_backup.sql
 ```
+
+
+```bash
+docker run --rm -i --network=host mysql8:latest \
+mysqldump \
+-h 192.168.172.xx \
+-P 3308 \
+-u root \
+-p'xxxxxx' \
+--databases ai_xx \
+--add-drop-database \
+--single-transaction \
+--routines \
+--triggers \
+--events \
+| docker run --rm -i --network=host mysql8:latest \
+mysql \
+-h 192.168.172.xx \
+-P 3308 \
+-u root \
+-p'xxxxx'
+```
