--- a/面试经典150/数据组字符串/买卖股票的最佳时机.md
+++ b/面试经典150/数据组字符串/买卖股票的最佳时机.md
@@ -17,3 +17,21 @@ class Solution {
     }
 }
 ```
+
+动态规划的写法
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        // 动态规划写法
+        int n = prices.length;
+        int[][] dp = new int[n][2];
+        dp[0][0] = -prices[0];
+        // dp[0][1] = 0;
+        for (int i = 1; i < n; i++) {
+            dp[i][0] = Math.max(dp[i - 1][0], -prices[i]);
+            dp[i][1] = Math.max(dp[i - 1][0] + prices[i], dp[i - 1][1]);
+        }
+        return dp[n - 1][1];
+    }
+}
+```
